tests/baselines/reference/assignmentCompatForEnums.errors.txt
assignmentCompatForEnums.ts(6,36): error TS2322: Type 'null' is not assignable to type 'TokenType'.


==== assignmentCompatForEnums.ts (1 errors) ====
    enum TokenType { One, Two };
    
    var list = {};
    
    
    function returnType(): TokenType { return null; }
                                       ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'TokenType'.
    
    function foo() {
        var x = returnType();
    
        var x: TokenType = list['one'];
    }
    
    